2006-01-31  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.
        
        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6959
          REGRESSION: Assertion failure in HTMLTokenizer::parseTag (!scriptNode) on page with ignored scripts

        * fast/parser/script-after-frameset-assert-expected.txt: Added.
        * fast/parser/script-after-frameset-assert.html: Added.

2006-01-31  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6960
          REGRESSION: Assertion failure in table_layout.cpp:216 calcWidthArray()

        * fast/table/fixed-table-non-cell-in-row.html: Added.
        * fast/table/fixed-table-non-cell-in-row-expected.txt: Added.
        * fast/table/fixed-table-non-cell-in-row-expected.png: Added.
        * fast/table/fixed-table-non-cell-in-row-expected.checksum: Added.

2006-01-31  Anders Carlsson  <andersca@mac.com>

        Reviewed by John.

        - update tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=6964
        ImagePatterns are always rendered mirrored
        
        * fast/dom/image-object-in-canvas-expected.checksum:
        * fast/dom/image-object-in-canvas-expected.png:

2006-01-31  Maciej Stachowiak  <mjs@apple.com>

        Added test case I forgot to commit earlier.

        - test case for crash if a node is removed from the DOM before being reparented due to residual style
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6778
        
        * fast/parser/remove-block-in-residual-style.html: Added.
        * fast/parser/remove-block-in-residual-style-expected.checksum: Added.
        * fast/parser/remove-block-in-residual-style-expected.png: Added.
        * fast/parser/remove-block-in-residual-style-expected.txt: Added.

2006-01-30  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        Update test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6907