@@ -1,0 +1,24 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x106
+  RenderBlock {HTML} at (0,0) size 800x106
+    RenderBody {BODY} at (8,8) size 784x90
+      RenderBlock {DIV} at (0,0) size 784x18
+        RenderInline {A} at (0,0) size 63x18 [color=#0000EE]
+          RenderText {TEXT} at (0,0) size 63x18
+            text run at (0,0) width 63: "Bug 6584"
+        RenderText {TEXT} at (63,0) size 374x18
+          text run at (63,0) width 374: " REGRESSION: button after unclosed button gives trouble"
+      RenderBlock {P} at (0,34) size 784x22
+        RenderButton {BUTTON} at (2,2) size 36x18 [bgcolor=#C0C0C0] [border: (2px outset #C0C0C0) none (2px outset #C0C0C0)]
+          RenderBlock (anonymous) at (8,2) size 20x13
+            RenderText {TEXT} at (0,0) size 20x13
+              text run at (0,0) width 20: "test"
+        RenderButton {BUTTON} at (42,2) size 43x18 [bgcolor=#C0C0C0] [border: (2px outset #C0C0C0) none (2px outset #C0C0C0)]
+          RenderBlock (anonymous) at (8,2) size 27x13
+            RenderText {TEXT} at (0,0) size 27x13
+              text run at (0,0) width 27: "test2"
+        RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,72) size 784x18
+        RenderText {TEXT} at (0,0) size 602x18
+          text run at (0,0) width 602: "There should be two separate buttons instead of button \"test2\" being nested inside button \"test\"."
