@@ -1,0 +1,17 @@
+<!DOCTYPE html 
+     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
+	<head>
+		<title>Button breakage</title>
+	</head>
+	<body>
+                <div><a href="http://bugzilla.opendarwin.org/show_bug.cgi?id=6584">Bug 6584</a> REGRESSION: button after unclosed button gives trouble</div>
+		<p>
+			<button/>
+			test
+			<button>test2</button>
+		</p>
+                <div>There should be two separate buttons instead of button "test2" being nested inside button "test".</div>
+	</body>
+</html>
